[gd_scene load_steps=15 format=3 uid="uid://bvff2vpgkqu53"]

[ext_resource type="Script" uid="uid://cfxcx5dxd1oku" path="res://script/shop.gd" id="1_e7rdd"]
[ext_resource type="Texture2D" uid="uid://w22pii0njxrm" path="res://Idle Working.png" id="2_blqjs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fgaav"]
atlas = ExtResource("2_blqjs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lah5"]
atlas = ExtResource("2_blqjs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmb2m"]
atlas = ExtResource("2_blqjs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kdgp"]
atlas = ExtResource("2_blqjs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myf4l"]
atlas = ExtResource("2_blqjs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5a0g"]
atlas = ExtResource("2_blqjs")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqmyw"]
atlas = ExtResource("2_blqjs")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw5c6"]
atlas = ExtResource("2_blqjs")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p3p6"]
atlas = ExtResource("2_blqjs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_msgp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgaav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lah5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmb2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kdgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myf4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5a0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqmyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw5c6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p3p6")
}],
"loop": false,
"name": &"stop",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e23gp"]
radius = 36.0139

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p3p6"]
size = Vector2(14, 14)

[node name="shop" type="Node2D"]
script = ExtResource("1_e7rdd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_msgp6")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_e23gp")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, -13)
scale = Vector2(0.5, 0.5)

[node name="stamina" type="Label" parent="Node2D"]
offset_left = -78.0
offset_top = -64.0
offset_right = 319.0
offset_bottom = 73.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 100
text = "stamina"

[node name="stamina2" type="Button" parent="Node2D"]
offset_left = -81.0
offset_top = -49.0
offset_right = -35.0
offset_bottom = -18.0
text = "4$"

[node name="heath" type="Label" parent="Node2D"]
offset_left = -20.0
offset_top = -64.0
offset_right = 377.0
offset_bottom = 73.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 100
text = "health
"

[node name="heath2" type="Button" parent="Node2D"]
offset_left = -23.0
offset_top = -49.0
offset_right = 23.0
offset_bottom = -18.0
text = "2$"

[node name="damage" type="Label" parent="Node2D"]
offset_left = 34.0
offset_top = -64.0
offset_right = 431.0
offset_bottom = 73.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 100
text = "damage"

[node name="damage2" type="Button" parent="Node2D"]
offset_left = 30.0
offset_top = -49.0
offset_right = 76.0
offset_bottom = -18.0
text = "5$"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_4p3p6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Node2D/heath2" to="." method="_on_heath_2_pressed"]
